feat: landing bottom

--- a/src/components/molecules/Landing/Services.astro
+++ b/src/components/molecules/Landing/Services.astro
@@ -17,7 +17,10 @@ const services = [
 
 <section
     class="relative after:w-full after:absolute after:bottom-0 after:-z-10 after:h-[350px] lg:after:bg-gray-100 pb-36">
-    <div class="max-w-5xl w-full mx-auto">
+    
+    <div class="max-w-6xl w-full mx-auto relative">
+
+        <img class="absolute right-0 -rotate-12 top-28" src="https://via.placeholder.com/200x200" alt="">
         <div class=" p-2 md:p-7 bg-white lg:shadow-xl max-w-2xl rounded-md">
             <h3 class=" font-semibold text-3xl mb-5">Nos services</h3>
             <p class="mb-10">Nous avons des solutions à chacun de vos problèmes</p>
@@ -30,7 +33,7 @@ const services = [
                         <img class=" w-12 h-12" src="https://via.placeholder.com/150x150" alt="">
                     </figure>
                     <a href="#" class="z-10 before:absolute before:inset-0 md:text-2xl">{service.label}</a>
-                    <span class="z-10 block cursor-pointer delay-150 transition-all group-hover:ml-2">
+                    <span class="z-10 block cursor-pointer delay-150 transition-all md:group-hover:ml-2">
                         <svg xmlns="http://www.w3.org/2000/svg" class=" stroke-primary-500" width="30" height="30"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="#888787" fill="none" stroke-linecap="round"
                             stroke-linejoin="round">
