--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -43,7 +43,7 @@ title = title.startsWith('loak.studio - ') ? title : title + " | loak.studio"
     </script>
 </head>
 
-<body class="flex font-content flex-col min-h-screen overflow-x-hidden lg:overflow-y-auto bg-lwhite">
+<body class="flex overflow-x--hidden font-content flex-col min-h-screen overflow-x-hidden lg:overflow-y-auto bg-lwhite">
     <Nav />
     <div class="flex-1">
         <slot />
