--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,16 +1,20 @@
-@import './fonts.css';
+@import "./fonts.css";
 
-.chevron::after{
-    content: "";
-    display: block;
-    width: 20px;
-    height: 20px;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='icon icon-tabler icon-tabler-chevron-right' width='20' height='20' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23388A84' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpolyline points='9 6 15 12 9 18' /%3E%3C/svg%3E");
+.chevron::after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='icon icon-tabler icon-tabler-chevron-right' width='20' height='20' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23388A84' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpolyline points='9 6 15 12 9 18' /%3E%3C/svg%3E");
 }
 
-
-
-.black-to-transparent-gradient{
-
-    background: linear-gradient(0deg, rgba(7, 18, 17, 0.5) 56.91%, rgba(7, 18, 17, 0) 100%);
+@media (min-width: 767px) {
+  .black-to-transparent-gradient {
+    @apply rounded-b-md;
+    background: linear-gradient(
+      0deg,
+      rgba(7, 18, 17, 0.5) 56.91%,
+      rgba(7, 18, 17, 0) 100%
+    );
+  }
 }
