feat: use good assets

--- a/src/components/molecules/Landing/Hero.astro
+++ b/src/components/molecules/Landing/Hero.astro
@@ -39,7 +39,7 @@ import bagWebp from "../../../images/hero/bag-dynamic-clay.webp"
         <img width="500" height="500" src={bagPng} alt="">
     </picture>
     <div class="relative z-10 flex flex-col md:items-center gap-10">
-        <h1 class="max-w-3xl leading-tight md:text-center text-4xl md:text-6xl text-primary-800">Vos projets, au
+        <h1 class="max-w-3xl leading-tight font-title md:text-center text-4xl md:text-6xl text-primary-800">Vos projets, au
             pixel près
         </h1>
         <p class="md:text-center max-w-xl p-4 backdrop-blur-md bg-opacity-40 bg-white rounded-md">
@@ -47,7 +47,7 @@ import bagWebp from "../../../images/hero/bag-dynamic-clay.webp"
             développeurs web et des designers afin de couvrir tous les aspects de la création de site internet et
             d’application web.
         </p>
-        <Button href="https://calendly.com/loakstudio/30min">
+        <Button extern={false} href="#contact">
             Parlons de votre projet
         </Button>
     </div>
