--- a/src/components/atoms/Button.astro
+++ b/src/components/atoms/Button.astro
@@ -1,12 +1,15 @@
 ---
-const { href = "#" } = Astro.props
+const { href = "#", extern = false } = Astro.props
 ---
 
-<a target="_blank" href={href} class="items-center max-w-fit inline-flex bg-primary-500 gap-2 hover:bg-primary-400 transition text-white rounded-md p-4">
-    <slot /> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" fill="none" stroke-linecap="round" stroke-linejoin="round">
+<a target={extern?'_blank':null} href={href} class="items-center max-w-fit inline-flex bg-primary-500 gap-2 hover:bg-primary-400 transition text-white rounded-md p-4">
+    <slot />
+    {extern &&
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" fill="none" stroke-linecap="round" stroke-linejoin="round">
         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
         <path d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5" />
         <line x1="10" y1="14" x2="20" y2="4" />
         <polyline points="15 4 20 4 20 9" />
       </svg>
+    }
 </a>
