--- a/src/components/molecules/Landing/Contact.astro
+++ b/src/components/molecules/Landing/Contact.astro
@@ -1,18 +1,21 @@
 ---
+import Letter from "../../../images/mail.webp"
 import Button from "../../atoms/Button.astro";
 
 ---
 
-<div>
+<div id="contact" class="pt-36">
+
     <section class="bg-gray-100 p-7 md:flex-row flex-col md:items-center rounded-md flex justify-center gap-7 md:gap-28 max-w-6xl mx-auto w-full">
         <figure class="">
-            <img class="w-full max-w-[225px]" src="https://via.placeholder.com/750x750" alt="">
+            <img width="500" height="500" class="w-full max-w-[225px]" src={Letter} alt="">
         </figure>
         <div class="space-y-4 max-w-md">
             <h2 class="font-semibold text-3xl">Prêt à lancer votre projet?</h2>
             <p class="">Une idée de projet web ? Un site vitrine ?Un e-commerce ? 
                 Prenons contact et parlons-en !</p>
-            <Button href="https://calendly.com/loakstudio/30min">Planifier un appel</Button>
+            <Button extern={true} href="https://calendly.com/loakstudio/30min">Planifier un appel</Button>
         </div>
     </section>
+
 </div>
