feat: motion dev & some animations

--- a/src/components/molecules/Landing/Expertise.astro
+++ b/src/components/molecules/Landing/Expertise.astro
@@ -1,7 +1,7 @@
 ---
 import Desktop from "../../../images/hero/computer-dynamic-clay.webp"
 ---
-<section class="flex md:flex-row px-4 lg:px-0 flex-col max-w-4xl gap-10 w-full mx-auto pb-36">
+<section id="expertise" class="flex md:flex-row px-4 lg:px-0 flex-col max-w-4xl gap-10 w-full mx-auto pb-36">
     <div>
         <figure class="w-52 -rotate-12">
             <img width="500" height="500" src={Desktop} alt="">
