--- a/src/components/molecules/Landing/Reinsurance.astro
+++ b/src/components/molecules/Landing/Reinsurance.astro
@@ -21,7 +21,7 @@ const cards = [
 ]
 ---
 
-<section class="max-w-6xl w-full md:gap-8 lg:gap-16 mx-auto md:grid md:grid-cols-3 pb-36">
+<section id="reinsurance" class="max-w-6xl w-full md:gap-8 lg:gap-16 mx-auto md:grid md:grid-cols-3 pb-36">
     {cards.map(card=>
     <div class=" space-y-5 bg-gray-50 p-4 md:p-7 rounded-md md:shadow-xl">
         <figure class="w-12 h-12">
