--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -39,7 +39,7 @@ title = title.startsWith('loak.studio - ') ? title : title + " | loak.studio"
 
 
     <script>
-        import '../scripts/app.js';
+        import '../scripts/app.ts';
     </script>
 </head>
 
