--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,5 +1,6 @@
 @import "./fonts.css";
-
+@import "./animations/bulb.css";
+@import "./animations/rocket.css";
 .chevron::after {
   content: "";
   display: block;
