--- a/src/components/molecules/Landing/Contact.astro
+++ b/src/components/molecules/Landing/Contact.astro
@@ -7,7 +7,7 @@ import Button from "../../atoms/Button.astro";
 <div id="contact" class="pt-36">
 
     <section class="bg-gray-100 p-7 md:flex-row flex-col md:items-center rounded-md flex justify-center gap-7 md:gap-28 max-w-6xl mx-auto w-full">
-        <figure class="">
+        <figure class="opacity-0">
             <img width="500" height="500" class="w-full max-w-[225px]" src={Letter} alt="">
         </figure>
         <div class="space-y-4 max-w-md">
