--- a/src/components/molecules/Landing/References.astro
+++ b/src/components/molecules/Landing/References.astro
@@ -44,9 +44,9 @@ const comments = [
 ]
 ---
 
-<section data-references class="max-w-6xl w-full mx-auto px-4 lg:px-0">
+<section id="references" data-references class="max-w-6xl w-full mx-auto px-4 lg:px-0">
     <h2 class="mb-12 text-primary-800 text-3xl font-semibold text-center">Nos références</h2>
-    <ul class="flex md:justify-center gap-16 overflow-scroll">
+    <ul class="opacity-0 flex md:justify-center gap-16 overflow-scroll">
         {clients.map(client=>
         <li class=" shrink-0 lg:shrink">
             <figure class=" max-w-[200px]">
