--- a/src/components/molecules/Landing/StudyCases.astro
+++ b/src/components/molecules/Landing/StudyCases.astro
@@ -19,17 +19,17 @@ const cases = [
 ]
 ---
 
-<section class="pb-36 overflow-x-hidden before:w-full before:absolute before:-z-10 before:h-[650px] lg:before:bg-gray-100">
+<section  class="pb-36 overflow-x-hidden before:w-full before:absolute before:-z-10 before:h-[650px] lg:before:bg-gray-100">
 
     <h2 class="font-semibold text-center text-3xl mb-10">Etude de cas</h2>
-    <div class="px-4 lg:px-0 md:grid space-y-8 relative md:space-y-0 md:grid-rows-2 gap-12 md:grid-cols-2 max-w-6xl w-full mx-auto">
-        <img width="500" height="500" src={Rocket} class="max-w-[230px] hidden md:block z-20 absolute -right-32 top-32 -rotate-90" alt="">
+    <div id="study-cases" class="opacity-0 px-4 lg:px-0 md:grid space-y-8 relative md:space-y-0 md:grid-rows-2 gap-12 md:grid-cols-2 max-w-6xl w-full mx-auto">
+        <img id="rocket" width="500" height="500" src={Rocket} class="max-w-[230px] hidden md:block z-20 absolute -right-32 top-32 -rotate-90" alt="">
         {cases.map((item,index)=>
-        <div class={"overflow-hidden before:left-0 relative before:transition-all before:z-0 before:w-full before:-bottom-full before:absolute md:hover:before:bottom-0 before:h-full delay-100 before:bg-gray-100 border border-transparent transition-all md:hover:border-primary-500 flex flex-col bg-gray-50 md:bg-white p-2 lg:p-7 shadow-xl rounded-md" + (index==1 ? ' md:row-span-2' : '' )}>
+        <div class={"study-case overflow-hidden before:left-0 relative before:transition-all before:z-0 before:w-full before:-bottom-full before:absolute md:hover:before:bottom-0 before:h-full delay-100 before:bg-gray-100 border border-transparent transition-all md:hover:border-primary-500 flex flex-col bg-gray-50 md:bg-white p-2 lg:p-7 shadow-xl rounded-md" + (index==1 ? ' md:row-span-2' : '' )}>
             <figure class="z-10 rounded-md overflow-hidden h-full">
                 <img class="h-full w-full object-cover" src={item.picture} alt="">
             </figure>
-            <div class="z-10 mt-7 gap-4 flex flex-col-reverse justify-between items-start md:items-center">
+            <div class="z-10 mt-7 gap-4 flex md:flex-row flex-col-reverse justify-between items-start md:items-center">
                 <h3 class="text-primary-800 text-2xl">
                     {item.title}
                 </h3>
