--- a/src/components/molecules/Landing/Team.astro
+++ b/src/components/molecules/Landing/Team.astro
@@ -20,7 +20,7 @@ const members = [
 ]
 ---
 
-<section class="max-w-6xl mx-auto w-full p-7 rounded-md bg-gray-100 mb-36 flex flex-col items-center">
+<section id="team" class="max-w-6xl mx-auto w-full p-7 rounded-md bg-gray-100 mb-36 flex flex-col items-center">
     <h2 class="text-center text-3xl mb-10 font-semibold">Notre équipe</h2>
     <ul class="md:grid md:grid-cols-3 flex flex-col gap-6 w-full mb-10">
         {members.map(member=>
