--- a/src/components/molecules/Landing/Hero.astro
+++ b/src/components/molecules/Landing/Hero.astro
@@ -12,8 +12,8 @@ import lockWebp from "../../../images/hero/lock-dynamic-clay.webp"
 import bagWebp from "../../../images/hero/bag-dynamic-clay.webp"
 ---
 
-<section id="hero" class="overflow-hidden px-4 md:px-0 relative min-h-[500px] h-[60vh] flex items-center justify-center mx-auto max-w-8xl mt-12">
-    <picture width="500" height="500" id="mail" class="opacity-0 md:block hidden absolute right-96 -top-32 w-36 rotate-[27deg]">
+<section id="hero" class=" overflow-hidden px-4 md:px-0 relative min-h-[500px] max-h-[60vh] h-full flex items-center justify-center mx-auto max-w-8xl mt-12">
+    <picture width="500" height="500" id="mail" class="opacity-0 md:block hidden absolute right-96 top-0 w-36 rotate-[27deg]">
         <source width="500" height="500" srcset={mailWebp} type="image/webp">
         <source width="500" height="500" srcset={mailPng} type="image/png">
         <img width="500" height="500" src={mailPng} alt="">
