--- a/src/components/molecules/Landing/Tools.astro
+++ b/src/components/molecules/Landing/Tools.astro
@@ -47,7 +47,7 @@ const toolsList = [
     <p class="text-center mt-5 mb-10">Nous avons des solutions à chacun de vos problèmes</p>
     <div class="relative grid grid-cols-2 gap-4 md:gap-0 md:grid-cols-4 max-w-2xl mx-auto">
 
-    <img width="500" height="500" class="absolute -left-64 rotate-12 top-28 max-w-[250px]" src={Pen} alt="">
+    <img id="pen" width="500" height="500" class="absolute -left-64 rotate-12 top-28 max-w-[250px]" src={Pen} alt="">
         {toolsList.map(list=>
         <div>
             <h3 class=" text-2xl mb-4">{list.title}</h3>
