--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -1,6 +1,7 @@
 ---
 import Icon from "../atoms/Icon.astro";
 import LeafIcon from "../atoms/LeafIcon.astro";
+import Contact from "../molecules/Landing/Contact.astro";
 const date = new Date()
 const links = [
     {
@@ -35,7 +36,7 @@ const links = [
     },
 ]
 ---
-
+<Contact/>
 <div class="bg-primary-500  mt-36 text-white py-7 px-4 lg:px-0">
     <div class="max-w-5xl mx-auto">
         <span class="flex gap-4 items-center mb-7">
@@ -72,6 +73,7 @@ const links = [
                 </li>
                 )}
             </ul>
+            <a class="mt-8 block" href="/blog">Blog</a>
         </nav>
     </div>
 </div>
