--- a/src/components/molecules/Landing/Services.astro
+++ b/src/components/molecules/Landing/Services.astro
@@ -4,24 +4,24 @@ import Bag from "../../../images/hero/bag-dynamic-clay.webp"
 import Target from "../../../images/target.png"
 import Roll from "../../../images/roll-brush.png"
 import Travel from "../../../images/travel.png"
-const services = [
-    {
-        icon: Bag,
-        label: 'Application web et  e-commerce'
-    },
-    {
-        icon: Target,
-        label: 'Conception d\'expérience utilisateur'
-    },
-    {
-        icon: Roll,
-        label: 'Site vitrine'
-    },
-    {
-        icon: Travel,
-        label: 'Création d\'API'
+
+const getIcon = (icon)=>{
+    switch (icon) {
+        case "Bag":
+          return Bag
+          case "Target":
+          return Target
+          case "Roll":
+          return Roll
+          case "Travel":
+          return Travel
+        default:
+            break;
     }
-]
+}
+
+const data = await fetch('https://api.storyblok.com/v1/cdn/stories' + `?&token=${import.meta.env.SB_TOKEN}&starts_with=services&cv=${new Date}`)
+const {stories} = await data.json()
 ---
 
 <section id="services"
@@ -35,13 +35,13 @@ const services = [
             <p class="mb-10">Nous avons des solutions à chacun de vos problèmes</p>
 
             <ul class=" space-y-7 md:flex md:flex-col md:items-start">
-                {services.map(service=>
+                {stories.map(service=>
                 <li
                     class="w-full md:w-auto flex group items-center overflow-hidden gap-7 before:transition-all transition before:w-full before:-left-full before:z-0 before:absolute hover:before:left-0 before:h-full before:bg-gray-100 relative border-transparent border hover:delay-100 hover:border-primary-500 p-2 rounded-md">
                     <figure   class="z-10 shrink-0">
-                        <img height="500" width="500" class=" w-12 h-12" src={service.icon} alt="">
+                        <img height="500" width="500" class=" w-12 h-12" src={getIcon(service.content.icon)} alt="">
                     </figure>
-                    <a href="#" class="z-10 before:absolute before:inset-0 md:text-2xl">{service.label}</a>
+                    <a href={"/service/" + service.slug} class="z-10 before:absolute before:inset-0 md:text-2xl">{service.name}</a>
                     <span class="z-10 block cursor-pointer delay-150 transition-all md:group-hover:ml-2">
                         <svg xmlns="http://www.w3.org/2000/svg" class=" stroke-primary-500" width="30" height="30"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="#888787" fill="none" stroke-linecap="round"
