--- a/src/components/molecules/Landing/StudyCases.astro
+++ b/src/components/molecules/Landing/StudyCases.astro
@@ -17,6 +17,9 @@ const cases = [
         type: 'Application web'
     },
 ]
+
+const data = await fetch('https://api.storyblok.com/v1/cdn/stories' + `?&token=${import.meta.env.SB_TOKEN}&starts_with=etudes-de-cas&cv=${new Date}`)
+const {stories} = await data.json()
 ---
 
 <section  class="pb-36 overflow-x-hidden before:w-full before:absolute before:-z-10 before:h-[650px] lg:before:bg-gray-100">
@@ -24,20 +27,20 @@ const cases = [
     <h2 class="font-semibold text-center text-3xl mb-10">Etude de cas</h2>
     <div id="study-cases" class="opacity-0 px-4 lg:px-0 md:grid space-y-8 relative md:space-y-0 md:grid-rows-2 gap-12 md:grid-cols-2 max-w-6xl w-full mx-auto">
         <img id="rocket" width="500" height="500" src={Rocket} class="max-w-[230px] hidden md:block z-20 absolute -right-32 top-32 -rotate-90" alt="">
-        {cases.map((item,index)=>
+        {stories.map((item,index)=>
         <div class={"study-case overflow-hidden before:left-0 relative before:transition-all before:z-0 before:w-full before:-bottom-full before:absolute md:hover:before:bottom-0 before:h-full delay-100 before:bg-gray-100 border border-transparent transition-all md:hover:border-primary-500 flex flex-col bg-gray-50 md:bg-white p-2 lg:p-7 shadow-xl rounded-md" + (index==1 ? ' md:row-span-2' : '' )}>
             <figure class="z-10 rounded-md overflow-hidden h-full">
-                <img class="h-full w-full object-cover" src={item.picture} alt="">
+                <img width="1920" height="1080" class="h-full w-full object-cover" src={item.content.picture.filename} alt="">
             </figure>
             <div class="z-10 mt-7 gap-4 flex md:flex-row flex-col-reverse justify-between items-start md:items-center">
                 <h3 class="text-primary-800 text-2xl">
-                    {item.title}
+                    {item.name}
                 </h3>
                 <span class=" bg-primary-500 text-white rounded-md py-1 px-2">
-                    {item.type}
+                    {item.content.type}
                 </span>
             </div>
-            <a class="z-10 before:absolute before:inset-0" href="/"></a>
+            <a class="z-10 before:absolute before:inset-0" href={"/etude-de-cas/" + item.slug}></a>
         </div>
         )}
     </div>
