--- a/src/components/molecules/Landing/Team.astro
+++ b/src/components/molecules/Landing/Team.astro
@@ -18,18 +18,21 @@ const members = [
         picture: 'https://via.placeholder.com/150x150'
     },
 ]
+const data = await fetch('https://api.storyblok.com/v1/cdn/stories' + `?&token=${import.meta.env.SB_TOKEN}&starts_with=notre-equipe&cv=${new Date}`)
+const {stories} = await data.json()
+
 ---
 
 <section id="team" class="max-w-6xl mx-auto w-full p-7 rounded-md bg-gray-100 mb-36 flex flex-col items-center">
     <h2 class="text-center text-3xl mb-10 font-semibold">Notre équipe</h2>
     <ul class="md:grid md:grid-cols-3 flex flex-col gap-6 w-full mb-10">
-        {members.map(member=>
+        {stories.map(member=>
         <li>
             <figure class="flex flex-row items-center md:block relative">
-                <img class="max-w-[100px] md:max-w-none rounded-md w-full" src={member.picture} alt="">
+                <img class="max-w-[100px] md:max-w-none rounded-md w-full" src={member.content.Image.filename} alt="">
                 <figcaption class="md:absolute overflow-hidden black-to-transparent-gradient md:text-white bottom-0 left-0 w-full py-6 px-3">
-                    <span class="block text-3xl font-semibold">{member.name}</span>
-                    <span>{member.job}</span>
+                    <span class="block text-3xl font-semibold">{member.content.Name}</span>
+                    <span>{member.content.Title}</span>
                 </figcaption>
             </figure>
         </li>
