fix: try using aliases

--- a/src/components/molecules/BlogPost/BlogPostPreview.astro
+++ b/src/components/molecules/BlogPost/BlogPostPreview.astro
@@ -1,5 +1,5 @@
 ---
-import ReadMore from "../../atoms/ReadMore.astro";
+import ReadMore from "@components/atoms/ReadMore.astro";
 const { title, text, href } = Astro.props
 ---
 
