--- a/src/components/molecules/Landing/Contact.astro
+++ b/src/components/molecules/Landing/Contact.astro
@@ -1,6 +1,6 @@
 ---
 import Letter from "../../../images/mail.webp"
-import Button from "../../atoms/Button.astro";
+import Button from "@components/atoms/Button.astro";
 
 ---
 
