--- a/src/components/molecules/Landing/Hero.astro
+++ b/src/components/molecules/Landing/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import Button from '../../atoms/Button.astro'
+import Button from '@components/atoms/Button.astro'
 import mailPng from "../../../images/hero/mail-dynamic-clay.png"
 import computerPng from "../../../images/hero/computer-dynamic-clay.png"
 import figmaPng from "../../../images/hero/figma-dynamic-clay.png"
