--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -1,6 +1,6 @@
 ---
-import Icon from "../atoms/Icon.astro";
-import LeafIcon from "../atoms/LeafIcon.astro";
+import Icon from "@components/atoms/Icon.astro";
+import LeafIcon from "@components/atoms/LeafIcon.astro";
 import Contact from "../molecules/Landing/Contact.astro";
 const date = new Date()
 const links = [
