--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -13,10 +13,10 @@ export async function getStaticPaths() {
 }
 
 import { Markdown } from 'astro/components';
-import Author from "../../components/molecules/BlogPost/Author.astro";
-import FeaturedBlogPost from "../../components/molecules/BlogPost/FeaturedBlogPost.astro";
-import Breadcrumb from "../../components/molecules/Breadcrumb.astro";
-import Main from "../../layouts/main.astro";
+import Author from "@components/molecules/BlogPost/Author.astro";
+import FeaturedBlogPost from "@components/molecules/BlogPost/FeaturedBlogPost.astro";
+import Breadcrumb from "@components/molecules/Breadcrumb.astro";
+import Main from "@layouts/main.astro";
 
 
 const {post, nextPost} = Astro.props
