--- a/src/pages/etude-de-cas/[slug].astro
+++ b/src/pages/etude-de-cas/[slug].astro
@@ -9,8 +9,8 @@ export async function getStaticPaths() {
         };
     });
 }
-import Main from "../../layouts/main.astro";
-import Breadcrumb from "../../components/molecules/Breadcrumb.astro";
+import Main from "@layouts/main.astro";
+import Breadcrumb from "@components/molecules/Breadcrumb.astro";
 import { Markdown } from 'astro/components';
 
 
