--- a/src/components/molecules/BlogPost/CurrentBlogPostPreview.astro
+++ b/src/components/molecules/BlogPost/CurrentBlogPostPreview.astro
@@ -1,5 +1,5 @@
 ---
-import ReadMore from "../../atoms/ReadMore.astro";
+import ReadMore from "@components/atoms/ReadMore.astro";
 const { picture,href, title, text } = Astro.props
 ---
 
