--- a/src/components/molecules/Landing/Team.astro
+++ b/src/components/molecules/Landing/Team.astro
@@ -1,5 +1,5 @@
 ---
-import Button from "../../atoms/Button.astro";
+import Button from "@components/atoms/Button.astro";
 
 const members = [
     {
