--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,6 +1,6 @@
 ---
-import Nav from "../components/organisms/Nav.astro"
-import Footer from "../components/organisms/Footer.astro"
+import Nav from "@components/organisms/Nav.astro"
+import Footer from "@components/organisms/Footer.astro"
 import '../style/app.css'
 
 let { title = "loak.studio - Création de sites web dans la région de Tournai | Belgique", description = "Nous sommes une équipe des développeurs et designer dans la région de Tournai en Belgique et sommes disponibles pour vous aider dans vos projets digitaux que nous réalisons 100% à la main.", image = "https://loak.studio/share.png" } = Astro.props
