--- a/src/pages/service/[slug].astro
+++ b/src/pages/service/[slug].astro
@@ -10,8 +10,8 @@ return stories.map((service) => {
     };
 });
 }
-import Breadcrumb from "../../components/molecules/Breadcrumb.astro";
-import Main from "../../layouts/main.astro";
+import Breadcrumb from "@components/molecules/Breadcrumb.astro";
+import Main from "@layouts/main.astro";
 import { Markdown } from 'astro/components';
 
 
