fix: use capitalize letter

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -16,7 +16,7 @@ import { Markdown } from 'astro/components';
 import Author from "@components/molecules/BlogPost/Author.astro";
 import FeaturedBlogPost from "@components/molecules/BlogPost/FeaturedBlogPost.astro";
 import Breadcrumb from "@components/molecules/Breadcrumb.astro";
-import Main from "@layouts/main.astro";
+import Main from "@layouts/Main.astro";
 
 
 const {post, nextPost} = Astro.props
