--- a/src/pages/etude-de-cas/[slug].astro
+++ b/src/pages/etude-de-cas/[slug].astro
@@ -1,4 +1,7 @@
 ---
+import Main from "@layouts/Main.astro";
+import Breadcrumb from "@components/molecules/Breadcrumb.astro";
+import { Markdown } from 'astro/components';
 export async function getStaticPaths() {
     const data = await fetch('https://api.storyblok.com/v1/cdn/stories' + `?&token=${import.meta.env.SB_TOKEN}&starts_with=etudes-de-cas&cv=${new Date}`)
     const {stories} = await data.json()
@@ -9,13 +12,7 @@ export async function getStaticPaths() {
         };
     });
 }
-import Main from "@layouts/main.astro";
-import Breadcrumb from "@components/molecules/Breadcrumb.astro";
-import { Markdown } from 'astro/components';
-
-
 const studyCase  = Astro.props
-
 ---
 
 <Main title={studyCase.name}>
