--- a/src/pages/service/[slug].astro
+++ b/src/pages/service/[slug].astro
@@ -11,7 +11,7 @@ return stories.map((service) => {
 });
 }
 import Breadcrumb from "@components/molecules/Breadcrumb.astro";
-import Main from "@layouts/main.astro";
+import Main from "@layouts/Main.astro";
 import { Markdown } from 'astro/components';
 
 
