--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,7 +2,7 @@
 import BlogPostPreview from "@components/molecules/BlogPost/BlogPostPreview.astro";
 import CurrentBlogPostPreview from "@components/molecules/BlogPost/CurrentBlogPostPreview.astro";
 import Breadcrumb from "@components/molecules/Breadcrumb.astro";
-import Main from "@layouts/main.astro";
+import Main from "@layouts/Main.astro";
 const data = await fetch('https://api.storyblok.com/v1/cdn/stories' + `?&token=${import.meta.env.SB_TOKEN}&starts_with=blog&cv=${new Date}`)
     const {stories} = await data.json()
 const firstPost = stories.shift()
