--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Services from "@components/molecules/Landing/Services.astro";
 import StudyCases from "@components/molecules/Landing/StudyCases.astro";
 import Team from "@components/molecules/Landing/Team.astro";
 import Tools from "@components/molecules/Landing/Tools.astro";
-import Main from "@layouts/main.astro";
+import Main from "@layouts/Main.astro";
 ---
 
 <Main>
